# DGA-Transformer-Encoder

./: .gitignore  README.md  README.tmp.md  data_analysis.py  demo.py  design.md  desing.md  pyproject.toml  version_check.py
src/dga_transformer_encoder/: __init__.py  charset.py  checkpoint.py  config.py  data.py  demo.py  eval.py  model.py  predict.py  prepare_data.py  sampler.py  train.py  train_wandb.py
