[project]
authors = [{name = "ccss17", email = "chansol0505@naver.com"}]
dependencies = []
name = "DGA-Transformer-Encoder"
requires-python = "== 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
dga_transformer_encoder = { path = ".", editable = true }

[tool.pixi.tasks]
prepare-data = "python -m dga_transformer_encoder.prepare_data data/raw/dga-training-data-encoded.json.gz"

train = "python -m dga_transformer_encoder.train --batch-size 512"

eval = "python -m dga_transformer_encoder.eval ./checkpoints/final"
eval-test = "python -m dga_transformer_encoder.eval ./checkpoints/final --split test"
eval-val = "python -m dga_transformer_encoder.eval ./checkpoints/final --split validation"
predict = "python -m dga_transformer_encoder.predict ./checkpoints/final google.com xkwjfpqmz.org"
demo =  "python demo.py"


[tool.pixi.system-requirements]
cuda = "12.9"

[tool.pixi.dependencies]
cuda-version = "12.9.*"
pytorch = "2.8.*"
typer = ">=0.19.2,<0.20"
datasets = ">=4.1.1,<5"
evaluate = ">=0.4.6,<0.5"
accelerate = ">=1.10.1,<2"
wandb = ">=0.22.1,<0.23"
transformers = ">=4.56.2,<5"
scikit-learn = ">=1.7.2,<2"
gradio = "*"
huggingface_hub = ">=0.35.3,<0.36"